--- a/index.ipynb
+++ b/index.ipynb
@@ -45,11 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Driver Class here with properties for each instance variable"
+    "# Define Driver Class here with properties for each instance variable\n",
+    "class Driver():\n",
+    "    \n",
+    "    def greet_passenger(self):\n",
+    "        return print(\"Hello! I'll be your driver today. My name is {} {}.\".format(self.first, self.last))"
    ]
   },
   {
@@ -67,11 +71,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! I'll be your driver today. My name is Matthew Mitchell.\n"
+     ]
+    }
+   ],
    "source": [
-    "#Create an instance with the above 4 attributes and then call the greet_passenger method"
+    "#Create an instance with the above 4 attributes and then call the greet_passenger method\n",
+    "driver = Driver()\n",
+    "driver.first = 'Matthew'\n",
+    "driver.last = 'Mitchell'\n",
+    "driver.miles_driven = 100\n",
+    "driver.rating = 4.9\n",
+    "\n",
+    "driver.greet_passenger()"
    ]
   },
   {
@@ -83,11 +102,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class here with properties for each instance variable"
+    "# Define Passenger Class here with properties for each instance variable\n",
+    "class Passenger():\n",
+    "    \n",
+    "    def yell_name(self):\n",
+    "        return print(self.first.upper(), self.last.upper())"
    ]
   },
   {
@@ -99,11 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RON BURGUNDY\n"
+     ]
+    }
+   ],
    "source": [
-    "#Create an instance of the passenger class with the first and last attributes. Then call the yell_name method"
+    "#Create an instance of the passenger class with the first and last attributes. Then call the yell_name method\n",
+    "passenger = Passenger()\n",
+    "passenger.first = \"Ron\"\n",
+    "passenger.last = \"Burgundy\"\n",
+    "passenger.yell_name()"
    ]
   },
   {
@@ -138,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
